--- a/etc/kubernetes/manifests/hasher-rs.yaml
+++ b/etc/kubernetes/manifests/hasher-rs.yaml
@@ -6,11 +6,11 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      hasher: true
+      hasher: "true"
   template:
     metadata:
       labels:
-        hasher: true
+        hasher: "true"
     spec:
       containers:
         -
