--- a/etc/kubernetes/manifests/rng-rs.yaml
+++ b/etc/kubernetes/manifests/rng-rs.yaml
@@ -6,11 +6,11 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      rng: true
+      rng: 'true'
   template:
     metadata:
       labels:
-        rng: true
+        rng: 'true'
     spec:
       containers:
         -
